# antivirus-fs

./: CMakeLists.txt  clamd.conf  main.c
